<?xml version="1.0"?>
<package format="2">
  <name>sdv_scripts</name>
  <version>0.0.1</version>
  <description>The sdv_scripts package</description>

  <maintainer email="jhangaritamo@unal.edu.co">jhony</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
