<?xml version="1.0"?>
<package format="2">
  <name>sdv_joystick</name>
  <version>0.1.0</version>
  <description>The sdv_joystick package to operate the SDV by ssh with a generic joystick</description>

  <author email="jfpinedap@unal.edu.com">Juan Francisco Pineda</author>
  <author email="jhangaritamo@unal.edu.co">Jhonyfer Angarita Moreno</author>
  <maintainer email="jhangaritamo@unal.edu.co">Jhonyfer Angarita Moreno</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
