<?xml version="1.0"?>
<package>
  <name>sdv_nav</name>
  <version>0.1.0</version>
  <description>The sdv_nav ros package</description>

  <maintainer email="jhangaritamo@unal.edu.co">admin</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sdv_scripts</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
