<?xml version="1.0"?>
<package format="2">
  <name>sdv_platform</name>
  <version>0.0.0</version>
  <description>The sdv_platform package</description>
  <maintainer email="jhangaritamo@unal.edu.co">Jhonyfer Angarita Moreno</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
