<?xml version="1.0"?>
<package format="2">
  <name>sdv_serial</name>
  <version>0.1.0</version>
  <description>Serial communication between tiva_c and PC</description>

  <author email="jfpinedap@unal.edu.com">Juan Francisco Pineda</author>
  <author email="jhangaritamo@unal.edu.com">Jhonyfer Angarita Moreno</author>
  <maintainer email="jhangaritamo@unal.edu.com">Jhonyfer Angarita Moreno</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sdv_msgs</build_depend>

  <build_export_depend>sdv_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sdv_msgs</exec_depend>

</package>
