<?xml version="1.0"?>
<package>
  <name>sdv_un_ros</name>
  <version>2.0.0</version>
  <description>Metapackage of software to install on SDVUNx.</description>

  <author email="jhangaritamo@unal.edu.co">Jhonyfer Angarita Moreno</author>
  <maintainer email="chvargasp@unal.edu.co">Christian Andrés Vargas Pérez</maintainer>

  <license>BSD</license>
  <url type="website"></url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdv_msgs</depend>
  <depend>sdv_nav</depend>
  <depend>sdv_serial</depend>

  <export>
    <metapackage/>
  </export>
</package>
