<?xml version="1.0"?>
<package format="2">
  <name>sdv_process</name>
  <version>0.0.0</version>
  <description>The sdv_process package</description>

  <maintainer email="saraujoc@unal.edu.co">saraujoc</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
